--- a/main.css
+++ b/main.css
@@ -5,3 +5,22 @@
     position: fixed;
     top: 0;
 }
+
+
+.content1{
+    width: 100%;
+    height: 800px;
+    background-color: green;
+}
+
+.trouNormand{
+    width: 100%;
+    height: 200px;
+    background-color: yellow;
+}
+
+.content2{
+    width: 100%;
+    height: 900px;
+    background-color: red;
+}
