--- a/main.css
+++ b/main.css
@@ -24,3 +24,15 @@
     height: 900px;
     background-color: red;
 }
+
+.footer{
+    width: 100%;
+    height: 150px;
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+}
+*{
+    width: 100%;
+    height: 100vh;
+}
